--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,8 @@ dependencies {
     implementation 'com.android.support:support-core-utils:28.0.0-beta01'
     implementation 'com.daimajia.swipelayout:library:1.2.0@aar'
     implementation 'com.android.support:support-v4:28.0.0-beta01'
+
+    implementation 'com.google.firebase:firebase-core:16.0.1'
+    implementation 'com.google.firebase:firebase-auth:16.0.2'
 }
+apply plugin: 'com.google.gms.google-services'
