--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0-beta01'
+    implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -29,17 +29,17 @@ dependencies {
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.makeramen:roundedimageview:2.3.0'
-    implementation 'com.android.support:cardview-v7:28.0.0-beta01'
+    implementation 'com.android.support:cardview-v7:28.0.0-rc01'
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
-    implementation 'com.android.support:design:28.0.0-beta01'
+    implementation 'com.android.support:design:28.0.0-rc01'
     implementation 'com.github.stfalcon:frescoimageviewer:0.5.0'
     implementation 'com.facebook.fresco:fresco:1.9.0'
     implementation 'me.relex:circleindicator:1.2.2@aar'
     implementation 'jp.wasabeef:fresco-processors:2.0.0'
-    implementation 'com.android.support:support-core-utils:28.0.0-beta01'
+    implementation 'com.android.support:support-core-utils:28.0.0-rc01'
     implementation 'com.daimajia.swipelayout:library:1.2.0@aar'
-    implementation 'com.android.support:support-v4:28.0.0-beta01'
+    implementation 'com.android.support:support-v4:28.0.0-rc01'
 
     implementation 'com.google.firebase:firebase-core:16.0.1'
     implementation 'com.google.firebase:firebase-auth:16.0.2'
