--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,13 +19,12 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.makeramen:roundedimageview:2.3.0'
@@ -40,8 +39,8 @@ dependencies {
     implementation 'com.android.support:support-core-utils:28.0.0-rc01'
     implementation 'com.daimajia.swipelayout:library:1.2.0@aar'
     implementation 'com.android.support:support-v4:28.0.0-rc01'
-
     implementation 'com.google.firebase:firebase-core:16.0.1'
     implementation 'com.google.firebase:firebase-auth:16.0.2'
+    implementation 'com.melnykov:floatingactionbutton:1.3.0'
 }
 apply plugin: 'com.google.gms.google-services'
