--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.makeramen:roundedimageview:2.3.0'
-    implementation 'com.android.support:cardview-v7:28.0.0-rc01'
+    implementation 'com.android.support:cardview-v7:28.0.0-rc02'
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
     implementation 'com.android.support:design:28.0.0-rc01'
@@ -36,14 +36,22 @@ dependencies {
     implementation 'com.facebook.fresco:fresco:1.9.0'
     implementation 'me.relex:circleindicator:1.2.2@aar'
     implementation 'jp.wasabeef:fresco-processors:2.0.0'
-    implementation 'com.android.support:support-core-utils:28.0.0-rc01'
+    implementation 'com.android.support:support-core-utils:28.0.0-rc02'
     implementation 'com.daimajia.swipelayout:library:1.2.0@aar'
-    implementation 'com.android.support:support-v4:28.0.0-rc01'
-    implementation 'com.google.firebase:firebase-core:16.0.1'
+    implementation 'com.android.support:support-v4:28.0.0-rc02'
+    implementation 'com.google.firebase:firebase-core:16.0.3'
     implementation 'com.google.firebase:firebase-auth:16.0.3'
     implementation 'com.google.firebase:firebase-storage:16.0.1'
     implementation 'com.google.firebase:firebase-database:16.0.1'
     implementation 'com.melnykov:floatingactionbutton:1.3.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
+
+//    implementation 'io.pristine:libjingle:11139'
+//    implementation 'me.kevingleason:pnwebrtc:1.0.6@aar'
+//    implementation 'com.pubnub:pubnub-android:3.7.4'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
 }
 apply plugin: 'com.google.gms.google-services'
