--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -45,11 +49,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:16.0.1'
     implementation 'com.melnykov:floatingactionbutton:1.3.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
-
-//    implementation 'io.pristine:libjingle:11139'
-//    implementation 'me.kevingleason:pnwebrtc:1.0.6@aar'
-//    implementation 'com.pubnub:pubnub-android:3.7.4'
-
+    //    implementation 'io.pristine:libjingle:11139'
+    //    implementation 'me.kevingleason:pnwebrtc:1.0.6@aar'
+    //    implementation 'com.pubnub:pubnub-android:3.7.4'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.google.code.gson:gson:2.8.2'
